# Standing_Balancing_Controller4MiniCheetah

./: CMakeLists.txt  README.md
balance 1.05/: CMakeLists.txt  CMakeLists.txt~  Stand_Controller.cpp~  Stand_Controller.h~  main.cpp  main.cpp~  stand.cpp  stand.cpp~  stand.h  stand.h~  stand_parameters.h
stand/: CMakeLists.txt  CMakeLists.txt~  stand.cpp  stand.cpp~  stand.h  stand.h~  stand_parameters.h~
